View Issue Details

IDProjectCategoryView StatusLast Update
0022804Open CASCADEOCCT:Modeling Algorithmspublic2012-03-29 17:26
ReportergkaAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2008 
Product Version6.5.2 
Target Version6.5.3Fixed in Version6.5.3 
Summary0022804: Sewing increases tolerance of vertices for redundant value.
DescriptionSewing increases tolerance of shared vertices.
Steps To ReproduceThis effect can be reproduced in DRAW

1. restore sew_bug.brep a
2. sew r 200 a
3. toler r

Tolerance MAX=4559.2834060189452 AVG=1233.7112206455054 MIN=9.9999999999999995e-008
FACE : MAX=9.9999999999999995e-008 AVG=9.9999999999999995e-008 MIN=9.9999999999999995e-008
EDGE : MAX=2279.6417030094726 AVG=479.52097838421247 MIN=9.9999999999999995e-008
TagsNo tags attached.
Test case numberchl 934 I6

Attached Files

  • sew_bug.brep (174,487 bytes)
  • chl_934_I6.tar.gz (636 bytes)

Relationships

parent of 0022846 closedbugmaster Following from issue 0022804 (regression on test case) 

Activities

gka

2011-11-11 11:12

developer  

sew_bug.brep (174,487 bytes)

gka

2011-11-16 15:56

developer   ~0018564

“SVN branch http://svn/svn/occt/branches/OCC22804 is ready to be reviewed

szv

2011-11-18 18:18

manager   ~0018588

The branch is reviewed - no comments.

mkv

2011-11-22 18:42

tester   ~0018607

Dear BugMaster,
Workbench KAS:dev:mkv-22804-occt was created from SVN branch http://svn/svn/occt/branches/22804
(and mkv-22804-products from trunk) and compiled on Linux platform.

Test cases for this bug is chl/934/I6. This test is OK in mkv-22804-products.

There are not regressions in mkv-22804-products regarding to KAS:dev:products-652-opt:

See results in /dn45/occttests/results/KAS/dev/mkv-22804-products_21112011/lin
See reference results in /dn45/occttests/results/KAS/dev/products-652-opt_23092011/lin
See test cases in /dn45/occttests/tests/ED
N.B. In order to launch testing case you can make use the following instructions
http://doc/doku.php?id=occt:certification

mkv

2011-11-22 18:43

tester  

chl_934_I6.tar.gz (636 bytes)

bugmaster

2011-11-25 16:04

administrator   ~0018627

Integrated into trunk of occt repository

Date: 2011-11-25 16:02:09 +0400 (Fri, 25 Nov 2011)
New Revision: 9542

Modified:
   trunk/src/BRepBuilderAPI/BRepBuilderAPI_Sewing.cxx

bugmaster

2011-11-28 16:16

administrator   ~0018645

Last edited: 2011-11-28 17:08

Dear Galina,

Integration of fix to trunk caused regression on case:
chl/917/A7
checkshape is bad because after sewing tolerance of is vertex increased greatly

gka

2011-12-12 14:53

developer   ~0018813

Dear Anaya.

Could you please analyze regression.

ama

2011-12-15 16:10

developer   ~0018864

Fix of this issue is represented in child issue 22846

abv

2012-01-12 16:10

manager   ~0019103

Dear bugmaster,

Please check -- the regression should have been eliminated by integration of 0022846

mkv

2012-01-12 19:52

tester   ~0019105

Dear BugMaster,
Test case chl/917/A7 is OK.

See results in /QADisk/occttests/results/KAS/dev/products-20111229-opt_29122011/lin
See test cases in /QADisk/occttests/tests/ED
N.B. In order to launch testing case you can make use the following instructions
http://doc/doku.php?id=occt:certification

bugmaster

2012-01-13 17:49

administrator   ~0019118

Problem is not reproduced after integration of 0022846

Related Changesets

occt: master 67ffcad0

2011-11-25 12:02:09

gka


Committer: bugmaster Details Diff
0022804: Sewing increases tolerance of vertices for redundant value. Affected Issues
0022804
mod - src/BRepBuilderAPI/BRepBuilderAPI_Sewing.cxx Diff File

Issue History

Date Modified Username Field Change
2011-11-11 11:12 gka New Issue
2011-11-11 11:12 gka Assigned To => gka
2011-11-11 11:12 gka File Added: sew_bug.brep
2011-11-16 15:55 gka Status new => assigned
2011-11-16 15:56 gka Note Added: 0018564
2011-11-16 15:56 gka Assigned To gka => szv
2011-11-16 15:56 gka Status assigned => resolved
2011-11-18 18:18 szv Note Added: 0018588
2011-11-18 18:18 szv Assigned To szv => bugmaster
2011-11-18 18:18 szv Status resolved => reviewed
2011-11-18 18:18 szv Resolution open => fixed
2011-11-18 18:18 szv Description Updated
2011-11-22 18:42 mkv Note Added: 0018607
2011-11-22 18:43 mkv File Added: chl_934_I6.tar.gz
2011-11-22 18:43 mkv Test case number => chl 934 I6
2011-11-22 18:43 mkv Status reviewed => tested
2011-11-25 16:04 bugmaster Note Added: 0018627
2011-11-25 16:04 bugmaster Status tested => verified
2011-11-25 16:04 bugmaster Assigned To bugmaster => gka
2011-11-28 16:16 bugmaster Note Added: 0018645
2011-11-28 16:16 bugmaster Status verified => assigned
2011-11-28 16:17 bugmaster Note Edited: 0018645
2011-11-28 17:08 bugmaster Note Edited: 0018645
2011-12-12 14:52 gka Status assigned => feedback
2011-12-12 14:53 gka Note Added: 0018813
2011-12-12 14:53 gka Status feedback => assigned
2011-12-12 14:53 gka Assigned To gka => ama
2011-12-15 13:34 ama Relationship added parent of 0022846
2011-12-15 16:10 ama Note Added: 0018864
2011-12-15 16:10 ama Status assigned => resolved
2012-01-12 16:10 abv Note Added: 0019103
2012-01-12 16:10 abv Assigned To ama => bugmaster
2012-01-12 16:10 abv Status resolved => reviewed
2012-01-12 19:52 mkv Note Added: 0019105
2012-01-12 19:52 mkv Status reviewed => tested
2012-01-13 17:49 bugmaster Note Added: 0019118
2012-01-13 17:49 bugmaster Status tested => closed
2012-01-13 17:49 bugmaster Fixed in Version => 6.5.3
2012-03-29 17:26 bugmaster Changeset attached => occt master 67ffcad0