0022804: Sewing increases tolerance of vertices for redundant value.